Add Christmas card sale

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <p>St. Mark's Parish
 <br/>Boise, Idaho</p>
 
-<div style="border:1px solid black;width:250pt;text-align:left;margin:25px auto">
-<p style="text-align:center">
-<b>Members</b>
-</p>
+<div style="border:1px solid black;width:200pt;text-align:left;margin:25px auto">
 <ul>
+<li>
+<a href="https://kofc12172.square.site/">Keep Christ in Christmas annual Christmas card sale</a>
+</li>
 <li>
 <a href="https://www.kofc.org/en/contact/update-contact-information.html">Update your personal information here.</a>
 </li>
