--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+        .container {
+            max-width: 716px;
+            margin: auto;
+            padding-top: 20px;
+        }
         .body {
             text-align: center;
         }
@@ -61,6 +66,7 @@
     </style>
 </head>
 <body>
+    <div class="container">
     <div class="top">
         <div class="logo">
             <img src="KOC.jpg" style="width:200px;max-width=100%"></img>
@@ -85,6 +91,7 @@
         <div class="button" onClick="window.open('https://www.kofc.org/secure/en/join/join-kofc.html')">
             New Member Signup
         </div>
+    </div>
     </div>
 </body>    
 </html>
