--- a/index.html
+++ b/index.html
@@ -2,68 +2,13 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        .body {
-            text-align: center;
-        }
-        .top {
-            max-width: 800px;
-        }
-        .bottom {
-            padding-top: 20px;
-            max-width: 800px;
-            clear: both;
-        }
-        .logo {
-            float: left;
-            width: 200px;
-            max-width: 40%;
-        }
-        .title {
-            float: left;
-            padding-left: 100px;
-            text-align: center;
-        }
-        .button {
-            float: left;
-            width: 140px;
-            margin: 5px;
-            padding: 10px;
-            height: 40px;
-            display: flex;
-            justify-content: center;
-            align-content: center;
-            flex-direction: column;
-            text-align: center;
-            background-color: #801b13;
-            color: #eaebef;
-            border: 3px solid #a58558;
-        }
-        .button:hover {
-            text-decoration: underline;
-            background-color: #a83b33;
-        }
-        a {
-            color: inherit;
-            text-decoration: none;
-        }
-        @media screen and (max-width: 716px) {
-            .button {
-                width: 280px;
-                max-width: 40%;
-            }
-            .title {
-                padding-left: 20px;
-                width: 400px;
-                max-width: 50%
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
     <div class="top">
         <div class="logo">
-            <img src="KOC.jpg" style="width:200px;max-width=100%"></img>
+            <img src="KOC.jpg"></img>
         </div>
         <div class="title">        
             <h1>Knights of Columbus<h1>
@@ -85,6 +30,8 @@
         <div class="button" onClick="window.open('https://www.kofc.org/secure/en/join/join-kofc.html')">
             New Member Signup
         </div>
+        <div style="clear:both"></div>
+    </div>
     </div>
 </body>    
 </html>
